--- a/app/steps/ui/citizenshub/template.html
+++ b/app/steps/ui/citizenshub/template.html
@@ -12,8 +12,8 @@
     <div class="govuk-grid-column-two-thirds" style="padding-left: 0px;">
       <hr class="govuk-section-break govuk-section-break--m govuk-section-break--visible probate-section-break">
       <br>
-      <div class="hmcts-progress-bar-vertical">
-        <ol class="hmcts-progress-bar__list">
+      <div class="hmcts-progress-bar-vertical" aria-label="{{ content.applicationProgressBar | safe }}">
+        <ol class="hmcts-progress-bar__list" aria-label="{{ content.applicationProgressBarListItems | safe }}">
           <li class="hmcts-progress-bar__list-item">
             <span  class="hmcts-progress-bar__icon hmcts-progress-bar__icon--complete"></span>
             <span class="govuk-visually-hidden">{{content.progressBarStep1Done | safe }}</span>
