--- a/app/steps/ui/static/accessibility/template.html
+++ b/app/steps/ui/static/accessibility/template.html
@@ -64,7 +64,14 @@
             <p class="govuk-body">{{ content.paragraph18 | safe }}</p>
             <h3 class="govuk-heading-s">{{ content["heading10-2"] | safe }}</h3>
             <p class="govuk-body">{{ content.paragraph19 | safe }}</p>
-            {{ unorderedList([content["list7-item1"] | replace("{applicationFormPA15}", globals.links.applicationFormPA15), content["list7-item2"], content["list7-item3"], content["list7-item4"] | replace("{deathReportedToCoroner}", globals.links.deathReportedToCoroner), content["list7-item5"]]) }}
+            {{ unorderedList([content["list7-item1"] | replace("{applicationFormPA15}", globals.links.applicationFormPA15)
+                            , content["list7-item2"]
+                            , content["list7-item3"]
+                            , content["list7-item4"] | replace("{deathReportedToCoroner}", globals.links.deathReportedToCoroner)
+                            , content["list7-item5"]
+                            , content["list7-item6"]
+                             ])
+          }}
 
             <h2 class="govuk-heading-m">{{ content.heading11 | safe }}</h2>
             <p class="govuk-body">{{ content.paragraph20 | safe }}</p>
