DTSPB-4673 fix component test

--- a/app/steps/ui/static/accessibility/template.html
+++ b/app/steps/ui/static/accessibility/template.html
@@ -65,10 +65,10 @@
             <h3 class="govuk-heading-s">{{ content["heading10-2"] | safe }}</h3>
             <p class="govuk-body">{{ content.paragraph19 | safe }}</p>
             {{ unorderedList([content["list7-item1"] | replace("{applicationFormPA15}", globals.links.applicationFormPA15)
-                            , content["list7-item2"]
-                            , content["list7-item3"]
-                            , content["list7-item4"] | replace("{deathReportedToCoroner}", globals.links.deathReportedToCoroner)
-                            , content["list7-item5"]
+                            , content["list7-item2"] | replace("{hmctAccessAccessibilityStatement}", globals.links.hmctAccessAccessibilityStatement)
+                            , content["list7-item3"] | replace("{payAccessibilityStatement}", globals.links.payAccessibilityStatement)
+                            , content["list7-item4"] | replace("{notifyAccessibilityStatement}", globals.links.notifyAccessibilityStatement)
+                            , content["list7-item5"] | replace("{deathReportedToCoroner}", globals.links.deathReportedToCoroner)
                             , content["list7-item6"]
                              ])
           }}
