DTSPB-4523 Content changes for excepted estate

--- a/app/steps/ui/iht/deceasedlatespousecivilpartner/template.html
+++ b/app/steps/ui/iht/deceasedlatespousecivilpartner/template.html
@@ -11,7 +11,7 @@
         name: "deceasedHadLateSpouseOrCivilPartner",
         fieldset: {
             legend: {
-                text: content.question,
+                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
