very rough but working webchat.
notably the text used is probably incorrect (refers to scotland, maybe
wrong phone number?) and does not translate to welsh, but as a proof of
life this is sufficient.

--- a/app/steps/ui/static/contact/template.html
+++ b/app/steps/ui/static/contact/template.html
@@ -8,6 +8,7 @@
             {% if fields.isWebChatEnabled.value === 'true'  %}
                 <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
                 {% include "includes/avaya-webchat.html" %}
+                {% include "includes/kerv-webchat.html" %}
             {% endif %}
             <p class="govuk-heading-s govuk-!-padding-top-2"> {{ common.helpHeading2 | safe }} </p>
             <p class="govuk-body"> {{ common.helpEmailLabel | replace("{contactEmailAddress}", common.helpEmail) | safe }} </p>
