--- a/app/steps/ui/static/contact/template.html
+++ b/app/steps/ui/static/contact/template.html
@@ -7,8 +7,11 @@
 
             {% if fields.isWebChatEnabled.value === 'true'  %}
                 <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
-                {% include "includes/avaya-webchat.html" %}
-                {% include "includes/kerv-webchat.html" %}
+                {% if fields.useNewWebChat === 'true' %}
+                  {% include "includes/kerv-webchat.html" %}
+                {% else %}
+                  {% include "includes/avaya-webchat.html" %}
+                {% endif %}
             {% endif %}
             <p class="govuk-heading-s govuk-!-padding-top-2"> {{ common.helpHeading2 | safe }} </p>
             <p class="govuk-body"> {{ common.helpEmailLabel | replace("{contactEmailAddress}", common.helpEmail) | safe }} </p>
