--- a/app/steps/ui/citizenshub/template.html
+++ b/app/steps/ui/citizenshub/template.html
@@ -171,7 +171,7 @@
           <p>{{ content.insertText | safe }}</p>
           {% if fields.isWebChatEnabled.value === 'true' %}
             <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
-            {% if fields.useNewWebChat === 'true' %}
+            {% if fields.useNewWebChat.value === 'true' %}
               {% include "includes/kerv-webchat.html" %}
             {% else %}
               {% include "includes/avaya-webchat.html" %}
