--- a/app/steps/ui/static/contact/template.html
+++ b/app/steps/ui/static/contact/template.html
@@ -7,7 +7,7 @@
 
             {% if fields.isWebChatEnabled.value === 'true'  %}
                 <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
-                {% if fields.useNewWebChat === 'true' %}
+                {% if fields.useNewWebChat.value === 'true' %}
                   {% include "includes/kerv-webchat.html" %}
                 {% else %}
                   {% include "includes/avaya-webchat.html" %}
