DTSPB-4523 Fix issue

--- a/app/steps/ui/iht/unusedallowanceclaimed/template.html
+++ b/app/steps/ui/iht/unusedallowanceclaimed/template.html
@@ -14,7 +14,8 @@
         classes: "govuk-fieldset__legend--l"
         }
     }) %}
-    <p class="govuk-body">{{ content.hint | safe }}</p>
+    <p class="govuk-body">{{ content.hint1 | safe }}</p>
+    <p class="govuk-body">{{ content.hint2 | replace("{deceasedName}", fields.deceasedName.value) | safe }}</p>
     {{ govukRadios({
             classes: "govuk-radios--inline",
             idPrefix: "unusedAllowanceClaimed",
