DTSPB-4801: Update Welsh new window -> new tab

--- a/test/data/legalDeclationHTML.html
+++ b/test/data/legalDeclationHTML.html
@@ -37,7 +37,7 @@
     <div class="phase-banner-beta">
         <p class="govuk-body">
             <strong class="phase-tag">Beta</strong>
-            <span>This is a new service – your <a aria-label="feedback (opens in a new window)" href="https://www.smartsurvey.co.uk/s/SurveyExit/?service=Probate&pageurl=/declaration" class="govuk-link" target="_blank" rel="external noopener">feedback (opens in a new window)</a> will help us to improve it.</span>
+            <span>This is a new service – your <a aria-label="feedback (opens in a new tab)" href="https://www.smartsurvey.co.uk/s/SurveyExit/?service=Probate&pageurl=/declaration" class="govuk-link" target="_blank" rel="external noopener">feedback (opens in a new tab)</a> will help us to improve it.</span>
         </p>
     </div>
     <div class="govuk-grid-row">
