--- a/app/steps/ui/citizenshub/template.html
+++ b/app/steps/ui/citizenshub/template.html
@@ -171,7 +171,11 @@
           <p>{{ content.insertText | safe }}</p>
           {% if fields.isWebChatEnabled.value === 'true' %}
             <p class="govuk-heading-s" id="avaya-web-chat-header"> {{ common.helpHeading3 | safe }} </p>
-          {% include "includes/avaya-webchat.html" %}
+            {% if fields.useNewWebChat.value === 'true' %}
+              {% include "includes/kerv-webchat.html" %}
+            {% else %}
+              {% include "includes/avaya-webchat.html" %}
+            {% endif %}
           {% endif %}
           <p class="govuk-heading-s govuk-!-padding-top-2"> {{ common.helpHeading2 | safe }} </p>
           <p class="govuk-body"> {{ common.helpEmailLabel | replace("{contactEmailAddress}", common.helpEmail) | safe }}</p>
