DTSPB-4687 fix test

--- a/app/steps/ui/screeners/starteligibility/template.html
+++ b/app/steps/ui/screeners/starteligibility/template.html
@@ -19,6 +19,7 @@
                     <li>{{ content.listItem3 | safe }}</li>
                     <li>{{ content.listItem4 | safe }}<a href="{{globals.links.ihtChecker}}" rel="external noopener" target="_blank" class="govuk-link" aria-label="{{content.linkText3}}">{{ content.linkText3 | safe }}</a></li>
                     <li>{{ content.listItem5 | safe }}</li>
+                    <li>{{ content.listItem6 | safe }}</li>
                 </ul>
             </p>
         </div>
