DTSPB-4689 Digitising Intestacy

--- a/app/steps/ui/deceased/dod/template.html
+++ b/app/steps/ui/deceased/dod/template.html
@@ -9,7 +9,7 @@
         {% set inlineErrors = {
             text:
             (
-                (fields["dod-date"].errorMessage + "<br>" if fields["dod-date"].errorMessage) +
+                (fields["dod-date"].errorMessage | replace("{deceasedName}", fields.deceasedName.value) | safe + "<br>" if fields["dod-date"].errorMessage) +
                 (fields["dod-day"].errorMessage + "<br>" if fields["dod-day"].errorMessage) +
                 (fields["dod-month"].errorMessage + "<br>" if fields["dod-month"].errorMessage) +
                 (fields["dod-year"].errorMessage + "<br>" if fields["dod-year"].errorMessage)
@@ -22,7 +22,7 @@
         namePrefix: "dod",
         fieldset: {
             legend: {
-                text: content.question | safe,
+                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
