--- a/app/steps/ui/deceased/dob/template.html
+++ b/app/steps/ui/deceased/dob/template.html
@@ -9,7 +9,7 @@
         {% set inlineErrors = {
             text:
             (
-                (fields["dob-date"].errorMessage + "<br>" if fields["dob-date"].errorMessage) +
+                (fields["dob-date"].errorMessage | replace("{deceasedName}", fields.deceasedName.value) | safe + "<br>" if fields["dob-date"].errorMessage) +
                 (fields["dob-day"].errorMessage + "<br>" if fields["dob-day"].errorMessage) +
                 (fields["dob-month"].errorMessage + "<br>" if fields["dob-month"].errorMessage) +
                 (fields["dob-year"].errorMessage + "<br>" if fields["dob-year"].errorMessage)
@@ -22,7 +22,7 @@
         namePrefix: "dob",
         fieldset: {
             legend: {
-                text: content.question | safe,
+                text: content.question | replace("{deceasedName}", fields.deceasedName.value) | safe,
                 isPageHeading: true,
                 classes: "govuk-fieldset__legend--l"
             }
