--- a/app/steps/ui/deceased/maritalstatus/template.html
+++ b/app/steps/ui/deceased/maritalstatus/template.html
@@ -20,12 +20,20 @@
             {
                 value: "optionMarried",
                 text: content["optionMarried"] | safe,
-                checked: true if fields.maritalStatus.value == "optionMarried"
+                checked: true if fields.maritalStatus.value == "optionMarried",
+                hint: {
+                    text: content["hintTextMarried"] | safe
+                }
             },
             {
                 value: "optionDivorced",
                 text: content["optionDivorced"] | safe,
                 checked: true if fields.maritalStatus.value == "optionDivorced"
+            },
+            {
+                value: "optionSeparated",
+                text: content["optionSeparated"] | safe,
+                checked: true if fields.maritalStatus.value == "optionSeparated"
             },
             {
                 value: "optionWidowed",
@@ -36,11 +44,6 @@
                 value: "optionNotMarried",
                 text: content["optionNotMarried"] | safe,
                 checked: true if fields.maritalStatus.value == "optionNotMarried"
-            },
-            {
-                value: "optionSeparated",
-                text: content["optionSeparated"] | safe,
-                checked: true if fields.maritalStatus.value == "optionSeparated"
             }
         ]
     }) }}
