--- a/app/steps/ui/deceased/divorcedate/template.html
+++ b/app/steps/ui/deceased/divorcedate/template.html
@@ -52,13 +52,13 @@
       }) }}
     {% endset -%}
 
-    {{ govukFieldset({
+    {% call govukFieldset({
         legend: {
             text: content.question | safe,
-            isPageHeading: true,
-            classes: "govuk-fieldset__legend--l"
+            classes: "govuk-fieldset__legend--l",
+            isPageHeading: true
         }
-    }) }}
+    }) %}
     <p class="govuk-body">{{ content.paragraph1 | safe }}</p>
     <p class="govuk-body">{{ content.paragraph2 | safe }}</p>
     {{ govukRadios({
@@ -84,6 +84,7 @@
             }
         ]
     }) }}
+    {% endcall %}
 
     <div class="govuk-form-group">
       {{ govukButton({
